--- a/gameserver/CMakeLists.txt
+++ b/gameserver/CMakeLists.txt
@@ -26,3 +26,4 @@ TARGET_LINK_LIBRARIES(../bin/gameserver libprotobuf.a)
 TARGET_LINK_LIBRARIES(../bin/gameserver -llua)
 TARGET_LINK_LIBRARIES(../bin/gameserver -ltolua++)
 TARGET_LINK_LIBRARIES(../bin/gameserver -ldl)
+TARGET_LINK_LIBRARIES(../bin/gameserver tcmalloc)
