--- a/dbserver/CMakeLists.txt
+++ b/dbserver/CMakeLists.txt
@@ -23,3 +23,4 @@ TARGET_LINK_LIBRARIES(../bin/dbserver libkhaki.a)
 TARGET_LINK_LIBRARIES(../bin/dbserver liblog4cpp.a)
 TARGET_LINK_LIBRARIES(../bin/dbserver libprotobuf.a)
 TARGET_LINK_LIBRARIES(../bin/dbserver libmysqlpp.so)
+TARGET_LINK_LIBRARIES(../bin/dbserver tcmalloc)
