--- a/dbserver/CMakeLists.txt
+++ b/dbserver/CMakeLists.txt
@@ -14,7 +14,8 @@ LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../server/khaki/deps/lib)
 LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../server/deps/lib)
 
 AUX_SOURCE_DIRECTORY(. SRC_CPP)
-AUX_SOURCE_DIRECTORY(./Mysql SRC_CPP_MYSQL)
+AUX_SOURCE_DIRECTORY(./MySQL SRC_CPP_MYSQL)
+AUX_SOURCE_DIRECTORY(./Redis SRC_CPP_MYSQL)
 AUX_SOURCE_DIRECTORY(../server/protocol/in SRC_CPP_PROTO_IN)
 AUX_SOURCE_DIRECTORY(../server/tinyxml SRC_TINY_XML)
 ADD_EXECUTABLE(../bin/dbserver ${SRC_CPP} ${SRC_CPP_PROTO_OUT} ${SRC_CPP_PROTO_IN} ${SRC_TINY_XML} ${SRC_CPP_MYSQL})
@@ -24,3 +25,4 @@ TARGET_LINK_LIBRARIES(../bin/dbserver liblog4cpp.a)
 TARGET_LINK_LIBRARIES(../bin/dbserver libprotobuf.a)
 TARGET_LINK_LIBRARIES(../bin/dbserver libmysqlpp.so)
 TARGET_LINK_LIBRARIES(../bin/dbserver tcmalloc)
+TARGET_LINK_LIBRARIES(../bin/dbserver hiredis)
